--- a/LabPasswords/LabPasswords.csproj
+++ b/LabPasswords/LabPasswords.csproj
@@ -53,25 +53,53 @@
     <Compile Include="clsPasswordItem.cs" />
     <Compile Include="clsUsers.cs" />
     <Compile Include="CryptLib.cs" />
+    <Compile Include="frmGetNewUserName.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGetNewUserName.Designer.cs">
+      <DependentUpon>frmGetNewUserName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmGetPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGetPassword.Designer.cs">
+      <DependentUpon>frmGetPassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="NewPasswordItemTypeDialog.cs">
+    <Compile Include="frmNewPasswordItemTypeDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewPasswordItemTypeDialog.Designer.cs">
-      <DependentUpon>NewPasswordItemTypeDialog.cs</DependentUpon>
+    <Compile Include="frmNewPasswordItemTypeDialog.Designer.cs">
+      <DependentUpon>frmNewPasswordItemTypeDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmRandomPasswordDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRandomPasswordDialog.Designer.cs">
+      <DependentUpon>frmRandomPasswordDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="clsRandomPassword.cs" />
+    <EmbeddedResource Include="frmGetNewUserName.resx">
+      <DependentUpon>frmGetNewUserName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGetPassword.resx">
+      <DependentUpon>frmGetPassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NewPasswordItemTypeDialog.resx">
-      <DependentUpon>NewPasswordItemTypeDialog.cs</DependentUpon>
+    <EmbeddedResource Include="frmNewPasswordItemTypeDialog.resx">
+      <DependentUpon>frmNewPasswordItemTypeDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRandomPasswordDialog.resx">
+      <DependentUpon>frmRandomPasswordDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -81,6 +109,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -95,6 +124,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Passwords.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
